--- a/src/App.css
+++ b/src/App.css
@@ -3,98 +3,79 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-/* .container {
-  display: flex;
-  width: 500px;
-  margin: 0;
-  padding: 10px;
-  border: 3px solid rgb(118, 222, 118);
-  border-radius: 20px;
-  text-align: center;
-  background-color: rgb(125, 125, 125);
-} */
-.container{
+.container {
   border-radius: 70%;
   background-color: rgb(255, 200, 80);
   width: 900px;
   height: 200px;
   margin: 0 auto;
-  align-content: center;
-  justify-items: center;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, .12);
 }
 
-.layout{
+.layout {
   border-radius: 50%;
   background-color: coral;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
   width: 600px;
   height: 150px;
+  box-shadow: 0 6px 16px rgba(0,0,0,.12);
+  flex-direction: column;
 }
 
-h1{
-  margin: 0;
+
+h1 {
+  margin: 20px 20px 40px;
   padding: 0;
 }
+
+nav{
+  display: flex;                   /* grid 아님! */
+  justify-content: center;
+  flex-direction: column;
+}
+nav ul{
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+nav li{
+  border: 2px dotted rgb(41, 49, 80);
+  border-radius: 50px;
+  padding: 2px 10px;
+}
+nav a{
+  color: rgb(41, 49, 80);
+  font-weight: 700;
+  text-decoration: none;
+}
+nav a:hover{
+  text-decoration: underline;
+}
+
 
 .li {
   margin-right: 3rem;
   border: 2px dotted rgb(41, 49, 80);
   border-radius: 50px;
-  padding: 2px;
-  
+  padding: 2px 10px;
 }
-
 .li a {
   color: rgb(41, 49, 80);
   font-weight: 700;
   text-decoration: none;
 }
-
 .li a:hover {
   text-decoration: underline;
 }
 
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-nav{
-  justify-items: center;
-}
